# 2024-01-22 v1.9 b337 ### √ conversion to new signal scheme for the agent's revised PinHandler2.class √ fixed a bug that prevented the inactive spawn to be activated when necessary √ centralized countdown and intro music away from the Spawn FSM to a game based transition (using the "audio" group in rules). √√ added form text field in the webinterface for the audio group √ fixed scheme_macros and replaced code string references to those macros to CONSTANTS in MQTT √ WithRespawns √√ added basic rfid handling √√ a little refactoring to get rid of unused code from early development √√ added support for pluggable voices √√ got rid of the guava Table for spawn_segments √ agents.html √√ changed Tests to combobox list √√ changed status parsing to pyAgent's style of status json